fix: include SDP answer in 200 OK and add RTP audio streaming
Without an SDP answer the provider (Telekom) could not establish media.
The call dialog was technically accepted but terminated with BYE after
~5 seconds because no RTP arrived.

Changes:
- Add CallMedia record: holds local UDP socket, remote RTP address,
  and the SDP answer string for one call leg.
- Add SdpNegotiator: parses the SDP offer from the INVITE (c= and
  m=audio lines), allocates a local UDP socket on an OS-assigned port,
  and builds a sendonly PCMA/8000 SDP answer using the public host
  address from LocalSipHostProvider.
- Add RtpAudioPlayer: sends a 1 kHz G.711 A-law (PCMA) sine-wave beep
  as 20 ms RTP packets (160 samples/packet) at 50 packets/second.
  MP3 decoding is deferred until signalling is confirmed end-to-end.
  Includes linearToAlaw() based on ITU-T G.711 spec.
- Update SipCallHandler: negotiate SDP before sending 200 OK; attach
  SDP body to the response; create RtpAudioPlayer per call; store
  CallMedia in CallState; close the UDP socket on BYE or after
  announcement completes (closeMedia helper, double-close safe).

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>